# bert-cord

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: bert_100m.yaml  bert_100m_dgx.yaml  bert_200m.yaml  bert_200m_dgx.yaml  bert_25m.yaml  bert_25m_dgx_portability.yaml  bert_25m_dgx_throughput.yaml  bert_25m_mac.yaml
configs/examples/: minimal.yaml
configs/experiments/: dgx_real_text_full.yaml  dgx_real_text_pilot.yaml  dgx_real_text_smoke.yaml  real_text_sanity.yaml  smoke_dgx.yaml  smoke_mac.yaml  synthetic_500.yaml
configs/model/: bert_100m.yaml  bert_200m.yaml  bert_25m.yaml
configs/platform/: dgx_portability.yaml  dgx_throughput.yaml  mac_mps.yaml
configs/tokenizer/: bert_cord_byte_bpe_32k.yaml  bert_cord_unigram_32k.yaml  bert_cord_wordpiece_32k.yaml
dev_mem/: architecture_decisions.md  current_status.md  development_log.md  experiment_log.md  project_brief.md
dev_mem/.obsidian/: workspace.json
docs/: DGX_DEPLOYMENT.md  HUGGINGFACE_ONNX_RELEASE.md  ONNX_EXPORT.md  REAL_TEXT_PRETRAINING.md  RELEASE_CHECKLIST.md  WANDB_INTEGRATION.md  recommended_corpus.md  tokenizer_pipeline.md  training_curve_analysis.md
experiments/: .gitkeep  envcheck_write_test.tmp
experiments/mac_val/: metrics.jsonl
experiments/run_001/: analysis_summary.json  metrics.jsonl  training_curve_report.md
experiments/smoke/: environment.json  metrics.jsonl  metrics_1783752353.jsonl  resolved_config.yaml
experiments/smoke_dgx/: environment.json  resolved_config.yaml
experiments/smoke_mac/: environment.json  resolved_config.yaml
experiments/wb_test/: resolved_config.yaml
experiments/wb_verify/: metrics.jsonl  resolved_config.yaml
scripts/: analyze_training_curve.py  benchmark_training.py  build_hf_onnx_package.py  check_environment.py  distill_teacher.py  evaluate.py  evaluate_synthetic.py  evaluate_tokenizer.py  export_onnx.py  overfit_tiny.py  predict_mask.py  predict_mask_onnx.py  prepare_tokenizer_corpus.py  pretrain_mlm.py  tokenize_and_pack_corpus.py  train_coordinator.py  train_tokenizer.py  validate_hf_onnx_package.py  validate_onnx.py  validate_packed_corpus.py
src/coordinator_bert/: __init__.py  attention.py  checkpointing.py  configuration.py  coordination_heads.py  corpus.py  curve_analysis.py  curve_plots.py  data.py  distillation.py  embeddings.py  inference.py  masking.py  mlm_head.py  model.py  onnx_export.py  packed_corpus.py  runtime.py  tokenizer_eval.py  tokenizer_train.py  tracking.py
tests/: conftest.py  test_attention.py  test_checkpoint.py  test_checkpoint_manager.py  test_curve_analysis.py  test_curve_fixture.py  test_curve_plots.py  test_distillation.py  test_hf_package.py  test_inference.py  test_masking.py  test_model_shapes.py  test_onnx_export.py  test_onnx_inference.py  test_packed_corpus.py  test_runtime.py  test_tokenizer_pipeline.py  test_tracking.py
tests/fixtures/: curve_metrics.jsonl
(+7 files in other folders)
