[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coordinator-bert"
version = "0.1.0"
description = "A compact, custom BERT-style masked-language-model pretraining system for AI coordination research (bert_cord)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Kan" }]
dependencies = [
    "torch>=2.1",
    "pyyaml>=6.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
data = [
    "datasets>=2.14",
    "tokenizers>=0.15",
    "accelerate>=0.27",
]
dev = [
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
