[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coordinator-bert"
version = "0.1.0"
description = "A compact, custom BERT-style masked-language-model pretraining system for AI coordination research (bert_cord)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Kan" }]
keywords = ["bert", "mlm", "pretraining", "coordination", "research"]

# Core: only what is needed to import and run the model itself.
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Testing / development.
dev = [
    "pytest>=7.4",
]
# Full training loop (data, tokenizer, accelerate, safetensors, memory reporting).
train = [
    "accelerate>=0.27",
    "datasets>=2.14",
    "tokenizers>=0.15",
    "safetensors>=0.4",
    "psutil>=5.9",
]
# Learning-curve analysis figures. scipy is intentionally NOT here: the numpy-only curve
# fitting path must keep working when scipy is absent (see scipy_optional extra below).
analysis = [
    "matplotlib>=3.6",
]
# Optional: scipy refines curve fits when present, but is never required.
scipy_optional = [
    "scipy>=1.10",
]
# Optional: ONNX export + portable ONNX Runtime inference (CPU). onnxscript is needed by the
# torch 2.x ONNX exporter. Not part of the minimal runtime.
onnx = [
    "onnx>=1.16",
    "onnxruntime>=1.17",
    "onnxscript>=0.1",
]
# Optional experiment tracking. NEVER required; W&B stays opt-in.
wandb = [
    "wandb>=0.16",
]
# Convenience aggregate for a full dev+train+analysis+onnx install (no wandb, no scipy).
all = [
    "coordinator-bert[dev,train,analysis,onnx]",
]

[project.urls]
Homepage = "https://github.com/OWNER/bert_cord"
Repository = "https://github.com/OWNER/bert_cord"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
coordinator_bert = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
